# rs-web-parser

./: Cargo.toml  README.md
src/: _main.rs  error.rs  lib.rs  main.rs  prelude.rs
src/document/: document.rs  mod.rs  node.rs  user.rs
src/parser/: document.rs  mod.rs  node.rs  nodes.rs  user.rs
src/search/: bing.rs  cites.rs  duck.rs  ecosia.rs  engine.rs  google.rs  mod.rs  page.rs  wiki.rs  yahoo.rs
